// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Row render properly 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "flexDirection": "row",
    }
  }
/>
`;

exports[`Row render properly with children 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "flexDirection": "row",
    }
  }
>
  <Text>
    test children
  </Text>
</View>
`;
